--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --config ./webpack.config.js"
+    "start": "set NODE_ENV=development&& webpack-dev-server  --open  --config ./config/webpack.config.js",
+    "build": "set NODE_ENV=production&& webpack  --progress  --config ./config/webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
@@ -26,9 +27,11 @@
     "postcss-loader": "^3.0.0",
     "resolve-from": "^5.0.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.0.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "react": "^16.8.6",
