--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": [ "@babel/react","@babel/preset-env"]  //babel转义react es6
+  "presets": ["@babel/react", "@babel/preset-env"], //babel转义react es6
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
 }
