--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=development&& webpack-dev-server  --open  --config ./config/webpack.config.js",
-    "build": "set NODE_ENV=production&& webpack  --progress  --config ./config/webpack.prod.config.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server  --open  --config ./config/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack  --progress  --config ./config/webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.0.0",
@@ -34,8 +36,10 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.0.0"
   }
 }
